@@ -1,3 +1,9 @@
+2004-01-02  Andrew Sobala  <aes@gnome.org>
+
+	* Makefile.am:
+	* themus-theme-applier.c: (main): use GNOMECC_GLADE_DIR. Patch from
+	Marcin Krzyzanowski. Fixes: Bug 126545.
+
 2003-12-30  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.1.1
